# FinoDays

./: .gitignore  Dockerfile  Makefile  alembic.ini  app.py  depends.py  docker-compose.yml  pyproject.toml
.chart/: Chart.yaml  values.yaml
.chart/templates/: deployment.yaml  service.yaml
.docker/nginx/: nginx.conf
configs/: .env.example  Environment.py
convertors/: CFA.py  History.py  PaymentMethod.py  User.py
errors/: errors.py
migrations/: env.py
migrations/versions/: 2f3e1a42ceb7_init.py  424a030dc976_add_auth.py  63f4519660c4_init.py  762e96bd9f4d_database_creation.py  b1823ea5a861_fixed_registy_columb.py  bd4262fb9976_init.py
models/: BaseModel.py  CFA.py  Company.py  History.py  PaymentMethod.py  PaymentMethods.py  User.py  __init__.py  cfa.py
repositories/: CFA.py  Company.py  History.py  PaymentMethod.py  User.py
routing/: CFA.py
routing/v1/: CFA.py  Company.py  History.py  PaymentMethod.py  User.py
schemas/: CFA.py  CFASchema.py  CFAchema.py  Company.py  History.py  PaymentMethod.py  PaymentMethodSchema.py  Token.py  User.py  UserSchema.py  cfa.py
services/: Authenticate.py  CFA.py  Company.py  History.py  PaymentMethod.py  User.py
utils/: errors.py  wrappers.py
